Fix z-index: -1

--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,6 @@ html {
 body {
   font-family: Aregular;
   line-height: 1.1;
-  overflow-x: hidden;
 }
 h1 {
   font-size: 16vmin;
@@ -111,6 +110,7 @@ header {
   background-color: white;
   width: 50px;
   text-align: center;
+  z-index: 1;
 }
 
 footer {
@@ -163,7 +163,7 @@ footer {
   position: absolute;
   left: 20vmin;
   top: 158vh;
-  z-index: -1;
+  z-index: 0;
   height: 120%;
   border-left: 3px dotted lightgrey;
 }
